--- a/css/index.css
+++ b/css/index.css
@@ -82,15 +82,14 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: #81c784;
+  opacity: 0.95;
   border-left: none;
   border-bottom: none;
   z-index: 2;
