--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -5,7 +5,7 @@
 }
 
 .menu {
-  display: none;
+  display: hidden;
   position: fixed;
   top: 75px;
   left: 0;
@@ -16,6 +16,7 @@
   border-left: none;
   border-bottom: none;
   z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transition: all 1s;
 }
 
 .menu ul li{
@@ -26,5 +27,15 @@
 }
 
 .menu--open {
-  display: block;
+  display: visible;
+  
 }
+
+
+// window.addEventListener('click', event => {
+//   if (event.target.matches('.menu-button')) {
+//     TweenMax.to(menu, 2, { ease: Circ.easeOut, x: 350 });
+//   } else if (!event.target.matches('.menu')) {
+//     TweenMax.to(menu, 2, { ease: Circ.easeOut, x: 0 });
+//   }
+// });
